Closed
Bug 841207
Opened 7 years ago
Closed 7 years ago
"ASSERTION: unexpected dominant-baseline value" with svg.text.css-frames.enabled
Categories
(Core :: SVG, defect)
Not set
Tracking
()
RESOLVED
FIXED
mozilla21
People
(Reporter: jruderman, Assigned: heycam)
References
(Blocks 1 open bug)
Details
(Keywords: assertion, testcase)
Attachments
(3 files)
With: user_pref("svg.text.css-frames.enabled", true); ###!!! ASSERTION: unexpected dominant-baseline value: 'Not Reached', file layout/svg/nsSVGTextFrame2.cpp, line 366 This assertion is in GetBaselinePosition. Bug 840041 fixed a similar-sounding assertion in ConvertSVGDominantBaselineToVerticalAlign.
Reporter | ||
Comment 1•7 years ago
|
||
Assignee | ||
Comment 2•7 years ago
|
||
Attachment #713738 -
Flags: review?(roc) → review+
Assignee | ||
Comment 3•7 years ago
|
||
https://hg.mozilla.org/integration/mozilla-inbound/rev/4b1ed5497f66
Comment 4•7 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/4b1ed5497f66
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in
before you can comment on or make changes to this bug.
Description
•