Bug 841207 - Handle all dominant-baseline values in SVG text layout. r=roc